[package]
name = "passenger"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["io-util"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0.133"
serde = { version = "1.0.203", features = ["derive"] }
common = { path = "../common" }
regex = "1.11.1"
